; ModuleID = '/home/carl/AnghaBench/arduino-esp32/cores/esp32/extr_esp32-hal-adc.c___analogSetCycles.c'
source_filename = "/home/carl/AnghaBench/arduino-esp32/cores/esp32/extr_esp32-hal-adc.c___analogSetCycles.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@__analogCycles = common dso_local global i32 0, align 4
@SENS_SAR_READ_CTRL_REG = common dso_local global i32 0, align 4
@SENS_SAR1_SAMPLE_CYCLE = common dso_local global i32 0, align 4
@SENS_SAR1_SAMPLE_CYCLE_S = common dso_local global i32 0, align 4
@SENS_SAR_READ_CTRL2_REG = common dso_local global i32 0, align 4
@SENS_SAR2_SAMPLE_CYCLE = common dso_local global i32 0, align 4
@SENS_SAR2_SAMPLE_CYCLE_S = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @__analogSetCycles(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  store i32 %3, i32* @__analogCycles, align 4
  %4 = load i32, i32* @SENS_SAR_READ_CTRL_REG, align 4
  %5 = load i32, i32* @SENS_SAR1_SAMPLE_CYCLE, align 4
  %6 = load i32, i32* @__analogCycles, align 4
  %7 = load i32, i32* @SENS_SAR1_SAMPLE_CYCLE_S, align 4
  %8 = call i32 @SET_PERI_REG_BITS(i32 %4, i32 %5, i32 %6, i32 %7)
  %9 = load i32, i32* @SENS_SAR_READ_CTRL2_REG, align 4
  %10 = load i32, i32* @SENS_SAR2_SAMPLE_CYCLE, align 4
  %11 = load i32, i32* @__analogCycles, align 4
  %12 = load i32, i32* @SENS_SAR2_SAMPLE_CYCLE_S, align 4
  %13 = call i32 @SET_PERI_REG_BITS(i32 %9, i32 %10, i32 %11, i32 %12)
  ret void
}

declare dso_local i32 @SET_PERI_REG_BITS(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
